# LibraAPI

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
libraapi/: main.py
libraapi/core/: config.py  security.py
libraapi/core/certs/: private.pem  public.pem
libraapi/database/: db.py
libraapi/database/models/: book.py  inventory.py  librarian.py  reader.py
libraapi/database/schemas/: book.py  inventory.py  librarian.py  reader.py  token.py
libraapi/dependencies/: db.py
libraapi/routers/: book.py  inventory.py  librarian.py  reader.py
libraapi/utils/: hashed.py  jwt_utils.py  validate.py
