[project]
name = "libraapi"
version = "0.1.0"
description = ""
authors = [
    {name = "d1vinel3af",email = "d1vinel3af@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[project.packages]
include = ["libraapi"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
